# ta-tools

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  LICENSE.md  PROGRESS.md  README.md  debug-rsi.mjs  package-lock.json  package.json  prompt.md  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/instructions/: context7.instructions.md  problem_handling.instructions.md  workflow.instructions.md
.github/workflows/: ci.yml  release.yml
benchmarks/: 2025-12-07-results.md  2025-12-09-results.md  2025-12-10-results.md
crates/ta-core/: Cargo.toml
crates/ta-core/src/: lib.rs  traits.rs  types.rs
crates/ta-core/src/indicators/: adx.rs  atr.rs  bbands.rs  cvd.rs  ema.rs  frvp.rs  hma.rs  ichimoku.rs  linreg.rs  macd.rs  mfi.rs  mod.rs  pivot_points.rs  rsi.rs  sma.rs  stoch_rsi.rs  stochastic.rs  vwap.rs  wma.rs
crates/ta-core/src/wasm/: bindings.rs  mod.rs
js/: index.ts
pkg/: package.json  ta_core.d.ts  ta_core.js  ta_core_bg.wasm  ta_core_bg.wasm.d.ts
scripts/: build.sh
tests/: benchmark.bench.ts  integration.test.ts  tulind.d.ts
